[workspace.package]
version = "0.1.0"
authors = ["Arjan van Eersel <arjan@vaneersel.me>"]
description = "A service in Rust"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arjanvaneersel/service-rs"
# TODO: Create page for project
# homepage = "https://arjan.vaneersel.me/service"

[workspace]
resolver = "2"
members = [
    "app",
    "business/rtm-upper",
    "runtime",
    "storage",
    "support",
    "transport",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
jsonrpsee = { version = "0.21", features = ["client-core", "macros", "server"] }
tokio = { version = "1.36.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }

# Project dependencies
rtm-upper = { path = "./business/rtm-upper" }
runtime = { path = "./runtime" }
storage = { path = "./storage" }
support = { path = "./support" }
transport = { path = "./transport" }
